[package]
name = "sentry-mobi"
authors = ["Markus Unterwaditzer <markus-honeypot@unterwaditzer.net>"]
description = "A minimal alternative frontend to Sentry.io"
readme = "README.md"
version = "0.1.0"
edition = "2021"
keywords = ["sentryio"]
license = "MIT"
repository = "https://github.com/untitaker/sentry-mobi"

[features]
hotreload = ["maud/hotreload"]

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.7", features = ["macros"] }
axum-extra = { version = "0.9.4", features = ["typed-routing"] }
axum-htmx = "0.6.0"
human-repr = "1.1.0"
jiff = { version = "0.1.14", features = ["serde"] }
# https://github.com/lambda-fairy/maud/issues/392
maud = { version = "0.26.0", features = ["axum"], git = "https://github.com/untitaker/maud", branch = "hotreload-prototype-v2" }
memory-serve = "0.6.0"
reqwest = { version = "0.12.9", features = ["json"] }
schnellru = "0.2.3"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.0"
time = "0.3.36"
tokio = { version = "1.41.0", features = ["full"] }
tower-sessions = "0.13.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
